--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -32,19 +32,42 @@ jobs:
           set -euo pipefail
           mkdir -p _site
 
-          # Snapshot immer spiegeln
           rsync -a --delete snapshot/ _site/snapshot/
-
-          # baseline/ und pdf/ nur wenn vorhanden (verhindert rsync-Fails)
           if [ -d baseline ]; then rsync -a --delete baseline/ _site/baseline/; fi
           if [ -d pdf ]; then rsync -a --delete pdf/ _site/pdf/; fi
-
-          # optionale Dateien
           if [ -f assets-index.md ]; then cp -f assets-index.md _site/assets-index.md; fi
           if [ -f README.md ]; then cp -f README.md _site/README.md; fi
 
-          # verhindert Jekyll-Filter
           touch _site/.nojekyll
+
+          cat > _site/index.html <<'HTML'
+          <!doctype html>
+          <html lang="de">
+            <head>
+              <meta charset="utf-8" />
+              <meta name="viewport" content="width=device-width, initial-scale=1" />
+              <title>Stoische Ruhe Snapshots (Mirror)</title>
+              <style>
+                body{font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;max-width:860px;margin:40px auto;padding:0 16px;line-height:1.5}
+                code{background:#f4f4f4;padding:2px 6px;border-radius:6px}
+              </style>
+            </head>
+            <body>
+              <h1>Stoische Ruhe Snapshots (Mirror)</h1>
+              <p>Direkte Dateien:</p>
+              <ul>
+                <li><a href="./snapshot/index.json">snapshot/index.json</a></li>
+                <li><a href="./snapshot/pages.json">snapshot/pages.json</a></li>
+                <li><a href="./snapshot/posts.json">snapshot/posts.json</a></li>
+                <li><a href="./snapshot/menus.json">snapshot/menus.json</a></li>
+                <li><a href="./snapshot/meta.json">snapshot/meta.json</a></li>
+                <li><a href="./snapshot/snapshot.json">snapshot/snapshot.json</a></li>
+              </ul>
+              <p><small>Tipp: Für Maschinenzugriff immer die direkten JSON-Links verwenden.</small></p>
+            </body>
+          </html>
+          HTML
+
 
       - name: Configure Pages
         uses: actions/configure-pages@v5
